# django-ec-idcardfield

./: .editorconfig  .gitignore  .python-version  CHANGELOG  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
ec_idcardfield/: __init__.py  apps.py  forms.py  models.py  serializers.py  validators.py
ec_idcardfield/locale/en/LC_MESSAGES/: django.mo  django.po
ec_idcardfield/locale/es/LC_MESSAGES/: django.mo  django.po
tests/: __init__.py  forms_tests.py  models_tests.py  serializers_tests.py  settings.py  validators_tests.py
tests/sample_app/: __init__.py  apps.py  forms.py  models.py  serializers.py  values.py
